# miv

./: Cargo.toml  readme.md
src/: cli.rs  commands.rs  lib.rs  main.rs  tui.rs  utils.rs
src/app/: mod.rs
src/app/command_line/: mod.rs
src/app/editor/: filetypes.rs  gap_buffer.rs  mod.rs  motions.rs
src/app/editor/highlighting/: mod.rs  rust_highlight_config.rs
src/app/theme/: mod.rs
src/input_handling/: command_mode.rs  insert_mode.rs  mod.rs  normal_mode.rs
src/ui/: mod.rs
src/ui/editor/: mod.rs
src/ui/status_line/: command_status_line.rs  insert_status_line.rs  mod.rs  normal_status_line.rs
